# gists

./: .gitignore  .travis.yml  README.md  access.c  af_unix_udp.cpp  alarm_book.c  allchild.c  backtrace.c  basic_listdir.c  can_frame.c  can_frame_p.c  chmod.c  cipher_list.c  client  client.c  clktick.c  crypto.c  crypto_hashes.c  crypto_md5.c  crypto_sha1.c  ctime.c  dev_random.c  dlopen.c  dptr.c  eaddrinuse.c  ealreadyinuse.c  ebadf.c  epoll_test.c  errno_strings.c  execl.c  execlp.c  fchmod.c  fcntl.c  fifo.c  fork.c  fork_wait.c  fstatvfs.c  getenv.c  getifaddr.c  getifindex.c  (+85 more)
ci/: python_build.py
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  args_setup.cpp  chrono_literals.cpp  class_test.cpp  cmake_install.cmake  cmalloc.c  constr.cpp  cpp_test.cpp  destructor  destructor.cpp  list.cpp  makeshared_func.cpp  map_std.cpp  map_vec.cpp  namespace_basic.cpp  namespaces  namespaces.cpp  namespaces_more.cpp  new.cpp  oper_overload.cc  overload_int.cpp  overloading.cpp  std_makeshared_class  std_makeshared_class.cpp  std_runtime.cpp  std_shareptr_makeshared  std_shareptr_makeshared.cpp  std_signal.cpp  string2  string2.cpp  stringadd.cpp  strings  strings.cpp  this.cpp  thisr.cpp  to_string  to_string.cpp  (+4 more)
cpp/c/: a.out  prep_test.c
cpp/cybersec/: oos.c
socketlib/: CMakeLists.txt  print_api.h  socketlib.c  socketlib.h
