cmake_minimum_required(VERSION 2.4)

project(CPPLearning)

if(CMAKE_COMPILER_IS_GNUCXX)
    add_definitions(-std=c++11)
endif()

add_executable(destructor destructor.cpp)
add_executable(namespaces namespaces.cpp)
add_executable(std_makeshared_class std_makeshared_class.cpp)
add_executable(std_shareptr_makeshared std_shareptr_makeshared.cpp)
add_executable(string2 string2.cpp)
add_executable(strings strings.cpp)
add_executable(to_string to_string.cpp)
add_executable(vector_sort vector_sort.cpp)
add_executable(list_1 list.cpp)
add_executable(app_std map_std.cpp)
add_executable(stringadd stringadd.cpp)
add_executable(thisr thisr.cpp)
add_executable(vector_classes vector_classes.cpp)
add_executable(destructor destructor.cpp)
add_executable(list_USECASE list_USECASE.cpp)
add_executable(map_vec map_vec.cpp)
add_executable(namespace_more namespaces_more.cpp)
add_executable(std_signal std_signal.cpp)
add_executable(strings strings.cpp)
add_executable(to_string to_string.cpp)
add_executable(vector_sort vector_sort.cpp)
add_executable(constr constr.cpp)
add_executable(inherit inherit.cpp)
add_executable(make_shared_func makeshared_func.cpp)
add_executable(namespace_basic namespace_basic.cpp)
add_executable(new new.cpp)
add_executable(this this.cpp)
add_executable(vector_add vector_add.cpp)

